--- a/index.html
+++ b/index.html
@@ -10,8 +10,145 @@
 <body>
   <span class="center">
     <a href="mailto:hello@infrable.com">
-<svg width="300" height="200" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 227.66 82.32"><defs><style>.cls-1{fill:#fff;}.cls-2{fill:#01b200;}</style></defs><title>Infrable</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M21.75,81.88a1.19,1.19,0,0,1-.89.38H14.54A1.32,1.32,0,0,1,13.26,81V36a1.11,1.11,0,0,1,.39-.86,1.24,1.24,0,0,1,.89-.35h6.32a1.24,1.24,0,0,1,.89.35,1.11,1.11,0,0,1,.39.86V81A1.2,1.2,0,0,1,21.75,81.88Z"/><path class="cls-1" d="M58.91,81.85a1.15,1.15,0,0,1-.89.41H52.14a1.16,1.16,0,0,1-.89-.41,1.31,1.31,0,0,1-.38-.93V60.11a32.85,32.85,0,0,0-.16-3.48A4.79,4.79,0,0,0,50,54.46a3,3,0,0,0-1.62-1.15A10.08,10.08,0,0,0,45.44,53a10.3,10.3,0,0,0-3.42.61,25.59,25.59,0,0,0-3.79,1.69V80.92a1.32,1.32,0,0,1-.39.93,1.15,1.15,0,0,1-.89.41H31.07a1.16,1.16,0,0,1-.89-.41,1.35,1.35,0,0,1-.38-.93V47.53a1.23,1.23,0,0,1,.38-.89,1.2,1.2,0,0,1,.89-.38h5.56a1.32,1.32,0,0,1,1.28,1.27v1.34a28.07,28.07,0,0,1,2.58-1.47,15,15,0,0,1,2.4-.92A15.47,15.47,0,0,1,45.38,46a22.51,22.51,0,0,1,2.87-.16,12.64,12.64,0,0,1,5.62,1.08,8.22,8.22,0,0,1,3.35,3,12.6,12.6,0,0,1,1.63,4.54,34.65,34.65,0,0,1,.44,5.68V80.92A1.31,1.31,0,0,1,58.91,81.85Z"/><path class="cls-1" d="M85.79,39a1,1,0,0,1-.64.26H82.28c-1.53,0-2.55.24-3,.73s-.74,1.52-.74,3.1v3.13h6.13a1.32,1.32,0,0,1,1.28,1.27v3.83a1.11,1.11,0,0,1-.39.86,1.25,1.25,0,0,1-.89.36H78.51V80.92a1.35,1.35,0,0,1-.38.93,1.16,1.16,0,0,1-.89.41H71.43a1.42,1.42,0,0,1-1.35-1.34V52.58l-5.68-.9a2.35,2.35,0,0,1-.89-.41.93.93,0,0,1-.38-.8V47.53a1.3,1.3,0,0,1,1.27-1.27h5.68V43.13a13.67,13.67,0,0,1,.8-5.05A7.49,7.49,0,0,1,73.12,35a8.33,8.33,0,0,1,3.48-1.59,21.07,21.07,0,0,1,4.53-.45,12.24,12.24,0,0,1,2,.16c.6.11,1.19.22,1.79.35a4.37,4.37,0,0,1,.77.35.74.74,0,0,1,.38.67v3.77A1,1,0,0,1,85.79,39Z"/><path class="cls-1" d="M108.39,52.58a1.23,1.23,0,0,1-.89.38,16.58,16.58,0,0,0-4.7.61,21.1,21.1,0,0,0-4.11,1.69V80.92a1.32,1.32,0,0,1-.39.93,1.15,1.15,0,0,1-.89.41H91.54a1.17,1.17,0,0,1-.9-.41,1.35,1.35,0,0,1-.38-.93V47.53a1.23,1.23,0,0,1,.38-.89,1.21,1.21,0,0,1,.9-.38h5.55a1.32,1.32,0,0,1,1.28,1.27v1.34a13,13,0,0,1,4.79-2.46,18.22,18.22,0,0,1,4.34-.6,1.3,1.3,0,0,1,1.27,1.28v4.59A1.23,1.23,0,0,1,108.39,52.58Z"/><path class="cls-2" d="M139.17,81.42a1.24,1.24,0,0,1-.9.39h-5.42a1.32,1.32,0,0,1-1.28-1.28v-1a22.34,22.34,0,0,1-4.47,2.07,14.42,14.42,0,0,1-4.53.74,17.82,17.82,0,0,1-4-.45,8.66,8.66,0,0,1-6.1-4.92,12.2,12.2,0,0,1-1-5.3V71.4q0-5.49,3.64-8.27t11.94-2.78h4V57.52c0-2.1-.46-3.5-1.37-4.18a7.08,7.08,0,0,0-4.25-1q-3.06,0-5.93.16c-1.92.1-3.41.22-4.47.35h-.32a1.67,1.67,0,0,1-.83-.19c-.22-.13-.32-.43-.32-.89V47.69a1.29,1.29,0,0,1,1.21-1.33c1.28-.25,2.82-.48,4.63-.7a52.7,52.7,0,0,1,6-.31q6.84,0,10.44,3t3.61,9.19v23A1.23,1.23,0,0,1,139.17,81.42Zm-8-15.45h-4a15.11,15.11,0,0,0-3.57.35,5.6,5.6,0,0,0-2.18,1,3.32,3.32,0,0,0-1.09,1.7A8.37,8.37,0,0,0,120,71.4v.25c0,1.58.36,2.63,1.09,3.16a6,6,0,0,0,3.53.8A12,12,0,0,0,128,75.1a15.83,15.83,0,0,0,3.11-1.28Z"/><path class="cls-2" d="M172.62,78.07q-3.76,4.25-11.49,4.25a49.09,49.09,0,0,1-6.45-.45,55.19,55.19,0,0,1-6.38-1.21,3.37,3.37,0,0,1-1.41-.67,1.56,1.56,0,0,1-.32-1.06V34.49a1.32,1.32,0,0,1,1.28-1.27h5.87a1.27,1.27,0,0,1,.9.38,1.24,1.24,0,0,1,.38.89V45.8c1.19-.17,2.32-.29,3.38-.36s2-.09,2.75-.09q7.73,0,11.49,4.24t3.77,11.78v4.92Q176.39,73.82,172.62,78.07ZM168,61.39a21.33,21.33,0,0,0-.29-3.62,7.79,7.79,0,0,0-1-2.86,5.33,5.33,0,0,0-2.11-1.9,7.21,7.21,0,0,0-3.38-.7c-.77,0-1.76,0-3,.13s-2.27.19-3.16.31V74.91a19.66,19.66,0,0,0,2.65.32c1.17.08,2.33.13,3.48.13a7.33,7.33,0,0,0,3.38-.7,5.35,5.35,0,0,0,2.11-1.91,7.67,7.67,0,0,0,1-2.85,21.33,21.33,0,0,0,.29-3.62Z"/><path class="cls-2" d="M190.53,81.9a1.07,1.07,0,0,1-.86.42h-5.94a1.16,1.16,0,0,1-.89-.42,1.32,1.32,0,0,1-.39-.93V35a1.32,1.32,0,0,1,1.28-1.28h5.94a1.13,1.13,0,0,1,.86.38,1.32,1.32,0,0,1,.35.9V81A1.42,1.42,0,0,1,190.53,81.9Z"/><path class="cls-2" d="M226.37,66.74H205.5v.19a12.13,12.13,0,0,0,.35,2.84,7.4,7.4,0,0,0,1.22,2.62,6.24,6.24,0,0,0,2.33,1.91,8.36,8.36,0,0,0,3.76.74c2.34,0,4.55-.08,6.61-.23s3.78-.28,5.14-.41h.19a1.4,1.4,0,0,1,.83.22.85.85,0,0,1,.32.74v4.21a2.34,2.34,0,0,1-.22,1.15c-.15.26-.52.43-1.12.51l-2.87.48c-.9.15-1.8.26-2.72.35s-1.91.15-3,.19-2.35.07-3.8.07a19.48,19.48,0,0,1-5.07-.74,13.68,13.68,0,0,1-5-2.55,14.1,14.1,0,0,1-3.8-4.92,17.6,17.6,0,0,1-1.52-7.82V61.57a20.93,20.93,0,0,1,1-6.77,14.13,14.13,0,0,1,3-5.11A12.7,12.7,0,0,1,206,46.47a17.7,17.7,0,0,1,6.51-1.12A16.85,16.85,0,0,1,219,46.53a12.88,12.88,0,0,1,4.76,3.35A14.67,14.67,0,0,1,226.67,55a20.6,20.6,0,0,1,1,6.55v3.57C227.66,66.21,227.23,66.74,226.37,66.74Zm-7.14-6.26a8.33,8.33,0,0,0-1.87-5.81,6.34,6.34,0,0,0-4.9-2,6.58,6.58,0,0,0-5,2,8.1,8.1,0,0,0-1.94,5.84v.26h13.67Z"/><rect class="cls-2" x="15.08" y="22.42" width="5.24" height="5.24" rx="2.62" transform="translate(-12.52 19.85) rotate(-45)"/><rect class="cls-2" x="22.52" y="22.42" width="5.24" height="5.24" rx="2.62" transform="translate(-10.34 25.11) rotate(-45)"/><rect class="cls-2" x="7.64" y="22.42" width="5.24" height="5.24" rx="2.62" transform="translate(-14.7 14.59) rotate(-45)"/><rect class="cls-2" x="7.64" y="15.08" width="5.24" height="5.24" rx="2.62" transform="translate(-9.51 12.44) rotate(-45)"/><rect class="cls-2" x="7.64" y="7.64" width="5.24" height="5.24" rx="2.62" transform="translate(-4.25 10.26) rotate(-45)"/><rect class="cls-2" x="15.08" y="15.08" width="5.24" height="5.24" rx="2.62" transform="translate(-7.33 17.7) rotate(-45)"/><rect class="cls-2" x="15.08" y="7.64" width="5.24" height="5.24" rx="2.62" transform="translate(-2.07 15.52) rotate(-45)"/><rect class="cls-2" x="22.52" y="7.64" width="5.24" height="5.24" rx="2.62" transform="translate(0.11 20.78) rotate(-45)"/><rect class="cls-2" x="22.52" y="15.08" width="5.24" height="5.24" rx="2.62" transform="translate(-5.15 22.96) rotate(-45)"/><rect class="cls-2" x="30.16" y="15.08" width="5.24" height="5.24" rx="2.62" transform="translate(-2.91 28.36) rotate(-45)"/><rect class="cls-2" x="15.08" width="5.24" height="5.24" rx="2.62" transform="translate(3.33 13.28) rotate(-45)"/><rect class="cls-2" y="15.08" width="5.24" height="5.24" rx="2.62" transform="translate(-11.75 7.04) rotate(-45)"/></g></g></svg>
-    </a>
+      <svg
+      xmlns:svg="http://www.w3.org/2000/svg"
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+      xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+      width="600"
+      height="300"
+      viewBox="0 0 600 300"
+      version="1.2"
+      id="svg61"
+      sodipodi:docname="Infrable file new colours.ai.svg"
+      inkscape:version="1.0beta2 (2b71d25, 2019-12-03)">
+     <defs
+        id="defs65" />
+     <sodipodi:namedview
+        pagecolor="#ffffff"
+        bordercolor="#666666"
+        inkscape:document-rotation="0"
+        borderopacity="1"
+        objecttolerance="10"
+        gridtolerance="10"
+        guidetolerance="10"
+        inkscape:pageopacity="0"
+        inkscape:pageshadow="2"
+        inkscape:window-width="1215"
+        inkscape:window-height="698"
+        id="namedview63"
+        showgrid="false"
+        inkscape:zoom="0.46289351"
+        inkscape:cx="353.43645"
+        inkscape:cy="329.17211"
+        inkscape:window-x="76"
+        inkscape:window-y="44"
+        inkscape:window-maximized="0"
+        inkscape:current-layer="svg61" />
+     <g
+        style="fill:#72e5f2;fill-opacity:1"
+        id="g945">
+       <path
+          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
+          d="m 69.597656,116.44922 c -2.402344,-2.40625 -2.402344,-6.30469 0,-8.71094 2.40625,-2.40625 6.308594,-2.40625 8.710938,0 2.40625,2.40625 2.40625,6.30469 0,8.71094 -2.402344,2.40234 -6.304688,2.40234 -8.710938,0"
+          id="path36"
+          inkscape:connector-curvature="0" />
+       <path
+          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
+          d="m 87.089844,116.44922 c -2.402344,-2.40625 -2.402344,-6.30469 0,-8.71094 2.40625,-2.40625 6.304687,-2.40625 8.710937,0 2.40625,2.40625 2.40625,6.30469 0,8.71094 -2.40625,2.40234 -6.304687,2.40234 -8.710937,0"
+          id="path38"
+          inkscape:connector-curvature="0" />
+       <path
+          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
+          d="m 60.816406,116.44922 c -2.40625,2.40234 -6.304687,2.40234 -8.710937,0 -2.40625,-2.40625 -2.40625,-6.30469 0,-8.71094 2.40625,-2.40625 6.304687,-2.40625 8.710937,0 2.40625,2.40625 2.40625,6.30469 0,8.71094"
+          id="path40"
+          inkscape:connector-curvature="0" />
+       <path
+          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
+          d="m 60.816406,99.195312 c -2.40625,2.402348 -6.304687,2.402348 -8.710937,0 -2.40625,-2.40625 -2.40625,-6.308593 0,-8.710937 2.40625,-2.40625 6.304687,-2.40625 8.710937,0 2.40625,2.402344 2.40625,6.304687 0,8.710937"
+          id="path42"
+          inkscape:connector-curvature="0" />
+       <path
+          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
+          d="m 60.816406,81.699219 c -2.40625,2.40625 -6.304687,2.40625 -8.710937,0 -2.40625,-2.402344 -2.40625,-6.304688 0,-8.707031 2.40625,-2.40625 6.304687,-2.40625 8.710937,0 2.40625,2.402343 2.40625,6.304687 0,8.707031"
+          id="path44"
+          inkscape:connector-curvature="0" />
+       <path
+          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
+          d="m 78.308594,99.195312 c -2.402344,2.402348 -6.304688,2.402348 -8.710938,0 -2.402344,-2.40625 -2.402344,-6.308593 0,-8.710937 2.40625,-2.40625 6.308594,-2.40625 8.710938,0 2.40625,2.402344 2.40625,6.304687 0,8.710937"
+          id="path46"
+          inkscape:connector-curvature="0" />
+       <path
+          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
+          d="m 78.308594,81.699219 c -2.402344,2.40625 -6.304688,2.40625 -8.710938,0 -2.402344,-2.402344 -2.402344,-6.304688 0,-8.707031 2.40625,-2.40625 6.308594,-2.40625 8.710938,0 2.40625,2.402343 2.40625,6.304687 0,8.707031"
+          id="path48"
+          inkscape:connector-curvature="0" />
+       <path
+          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
+          d="m 95.800781,81.699219 c -2.40625,2.40625 -6.304687,2.40625 -8.710937,0 -2.402344,-2.402344 -2.402344,-6.304688 0,-8.707031 2.40625,-2.40625 6.304687,-2.40625 8.710937,0 2.40625,2.402343 2.40625,6.304687 0,8.707031"
+          id="path50"
+          inkscape:connector-curvature="0" />
+       <path
+          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
+          d="m 95.800781,99.195312 c -2.40625,2.402348 -6.304687,2.402348 -8.710937,0 -2.402344,-2.40625 -2.402344,-6.308593 0,-8.710937 2.40625,-2.40625 6.304687,-2.40625 8.710937,0 2.40625,2.402344 2.40625,6.304687 0,8.710937"
+          id="path52"
+          inkscape:connector-curvature="0" />
+       <path
+          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
+          d="m 113.76953,99.195312 c -2.40234,2.402348 -6.30469,2.402348 -8.71094,0 -2.40234,-2.40625 -2.40234,-6.308593 0,-8.710937 2.40625,-2.40625 6.3086,-2.40625 8.71094,0 2.40625,2.402344 2.40625,6.304687 0,8.710937"
+          id="path54"
+          inkscape:connector-curvature="0" />
+       <path
+          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
+          d="m 78.308594,63.730469 c -2.402344,2.40625 -6.304688,2.40625 -8.710938,0 -2.402344,-2.402344 -2.402344,-6.304688 0,-8.707031 v -0.0039 c 2.40625,-2.402343 6.308594,-2.402343 8.710938,0 v 0.0039 c 2.40625,2.402343 2.40625,6.304687 0,8.707031"
+          id="path56"
+          inkscape:connector-curvature="0" />
+       <path
+          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
+          d="m 42.847656,99.195312 c -2.40625,2.402348 -6.304687,2.402348 -8.710937,0 -2.40625,-2.40625 -2.40625,-6.308593 0,-8.710937 2.40625,-2.40625 6.304687,-2.40625 8.710937,0 2.40625,2.402344 2.40625,6.304687 0,8.710937"
+          id="path58"
+          inkscape:connector-curvature="0" />
+     </g>
+     <g
+        style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:142.291px;line-height:0;font-family:inter;-inkscape-font-specification:inter;font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-east-asian:normal;word-spacing:0px;fill:#72e5f2;fill-opacity:1;stroke-width:3.55726"
+        id="text861"
+        transform="scale(0.99558518,1.0044344)"
+        aria-label="Infrable ">
+       <path
+          id="path951"
+          style="fill:#ffffff"
+          d="M 83.553784,131.92527 H 64.807349 v 103.48437 h 18.746435 z" />
+       <path
+          id="path953"
+          style="fill:#ffffff"
+          d="m 115.85116,189.93311 c 0,-11.21754 6.77094,-17.68532 16.42207,-17.68532 9.44902,0 15.10832,6.21513 15.10832,16.57367 v 46.58818 h 18.29167 v -49.41783 c 0.0505,-18.59485 -10.56066,-29.20603 -26.57851,-29.20603 -11.62178,0 -19.60543,5.55824 -23.1425,14.19878 h -0.90953 v -13.1882 H 97.559485 v 77.61328 h 18.291675 z" />
+       <path
+          id="path955"
+          style="fill:#ffffff"
+          d="m 217.955,157.79636 h -16.11891 v -6.11406 c 0,-6.06354 2.52648,-9.44901 9.34796,-9.44901 2.88018,0 5.30559,0.65688 6.82148,1.11164 l 3.68865,-14.14825 c -2.37489,-0.80847 -7.57942,-2.12224 -13.89561,-2.12224 -13.49137,0 -24.25415,7.73101 -24.25415,23.39515 v 7.32677 h -11.47019 v 14.14826 h 11.47019 v 63.46502 h 18.29167 V 171.94462 H 217.955 Z" />
+       <path
+          id="path957"
+          style="fill:#ffffff"
+          d="m 226.6551,235.40964 h 18.29167 v -45.62812 c 0,-9.85325 7.42783,-16.82631 17.48319,-16.82631 3.0823,0 6.92254,0.55582 8.48896,1.06112 v -16.82632 c -1.66748,-0.30318 -4.54766,-0.50529 -6.56884,-0.50529 -8.89318,0 -16.32102,5.05294 -19.15067,14.04719 h -0.80847 V 157.79636 H 226.6551 Z" />
+       <path
+          id="path959"
+          style="letter-spacing:-7.5px;fill:#72e5f2;fill-opacity:1"
+          d="m 299.78029,236.97605 c 12.17761,0 19.45385,-5.70983 22.7888,-12.22813 h 0.60635 v 10.66172 h 17.58426 v -51.9443 c 0,-20.51497 -16.72526,-26.67956 -31.5304,-26.67956 -16.32102,0 -28.85233,7.27624 -32.89468,21.42449 l 17.07896,2.42542 c 1.81906,-5.3056 6.97307,-9.85325 15.91678,-9.85325 8.48896,0 13.13767,4.34553 13.13767,11.97548 v 0.30318 c 0,5.25507 -5.50772,5.50771 -19.2012,6.97307 -15.05779,1.61694 -29.45869,6.11407 -29.45869,23.59726 0,15.25991 11.16702,23.34462 25.97215,23.34462 z m 4.74977,-13.44084 c -7.62995,0 -13.08713,-3.48653 -13.08713,-10.20695 0,-7.0236 6.11407,-9.95431 14.29984,-11.11649 4.8003,-0.65688 14.4009,-1.86959 16.77579,-3.78971 v 9.14584 c 0,8.64054 -6.97307,15.96731 -17.9885,15.96731 z" />
+       <path
+          id="path961"
+          style="letter-spacing:-7.5px;fill:#72e5f2;fill-opacity:1"
+          d="m 352.46088,235.40964 h 17.9885 V 223.1815 h 1.06111 c 2.88018,5.65931 8.89319,13.59243 22.23297,13.59243 18.29167,0 31.98516,-14.50196 31.98516,-40.06987 0,-25.87109 -14.09772,-39.91828 -32.03569,-39.91828 -13.69348,0 -19.40331,8.2363 -22.18244,13.84507 h -0.75794 V 131.92527 H 352.46088 Z M 370.39885,196.603 c 0,-15.05778 6.46777,-24.80997 18.24114,-24.80997 12.1776,0 18.44326,10.35854 18.44326,24.80997 0,14.55249 -6.36672,25.16368 -18.44326,25.16368 -11.67231,0 -18.24114,-10.1059 -18.24114,-25.16368 z" />
+       <path
+          id="path963"
+          style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:142.291px;line-height:0;font-family:Inter;-inkscape-font-specification:Inter;font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-east-asian:normal;letter-spacing:-5.625px;fill:#72e5f2;fill-opacity:1;stroke-width:3.55726"
+          d="m 452.20971,131.92527 h -18.29167 v 103.48437 h 18.29167 z" />
+       <path
+          id="path965"
+          style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:142.291px;line-height:0;font-family:Inter;-inkscape-font-specification:Inter;font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-east-asian:normal;letter-spacing:-5.625px;fill:#72e5f2;fill-opacity:1;stroke-width:3.55726"
+          d="m 499.61539,236.92552 c 18.08955,0 30.5198,-8.84266 33.75369,-22.33403 l -17.07896,-1.92012 c -2.47595,6.56884 -8.53948,10.00484 -16.42208,10.00484 -11.8239,0 -19.65597,-7.78154 -19.80756,-21.07079 h 54.06654 v -5.60877 c 0,-27.23539 -16.37155,-39.21087 -35.47169,-39.21087 -22.23297,0 -36.73493,16.32102 -36.73493,40.27199 0,24.3552 14.29984,39.86775 37.69499,39.86775 z m -19.50438,-47.64929 c 0.55583,-9.90378 7.8826,-18.24114 18.79697,-18.24114 10.51013,0 17.58425,7.68048 17.68531,18.24114 z" />
+     </g>
+   </svg>
+       </a>
 </span>
 </body>
 
