--- a/index.html
+++ b/index.html
@@ -1,155 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
+
 <head>
   <title>Infrable</title>
   <link rel="stylesheet" href="css/page.css">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-
 </head>
 
-<body>
-  <span class="center">
+<body class="infrable-logo">
+  <div class="infrable-logo">
     <a href="mailto:hello@infrable.com">
-      <svg
-      xmlns:svg="http://www.w3.org/2000/svg"
-      xmlns="http://www.w3.org/2000/svg"
-      xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-      xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-      width="600"
-      height="300"
-      viewBox="0 0 600 300"
-      version="1.2"
-      id="svg61"
-      sodipodi:docname="Infrable file new colours.ai.svg"
-      inkscape:version="1.0beta2 (2b71d25, 2019-12-03)">
-     <defs
-        id="defs65" />
-     <sodipodi:namedview
-        pagecolor="#ffffff"
-        bordercolor="#666666"
-        inkscape:document-rotation="0"
-        borderopacity="1"
-        objecttolerance="10"
-        gridtolerance="10"
-        guidetolerance="10"
-        inkscape:pageopacity="0"
-        inkscape:pageshadow="2"
-        inkscape:window-width="1215"
-        inkscape:window-height="698"
-        id="namedview63"
-        showgrid="false"
-        inkscape:zoom="0.46289351"
-        inkscape:cx="353.43645"
-        inkscape:cy="329.17211"
-        inkscape:window-x="76"
-        inkscape:window-y="44"
-        inkscape:window-maximized="0"
-        inkscape:current-layer="svg61" />
-     <g
-        style="fill:#72e5f2;fill-opacity:1"
-        id="g945">
-       <path
-          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
-          d="m 69.597656,116.44922 c -2.402344,-2.40625 -2.402344,-6.30469 0,-8.71094 2.40625,-2.40625 6.308594,-2.40625 8.710938,0 2.40625,2.40625 2.40625,6.30469 0,8.71094 -2.402344,2.40234 -6.304688,2.40234 -8.710938,0"
-          id="path36"
-          inkscape:connector-curvature="0" />
-       <path
-          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
-          d="m 87.089844,116.44922 c -2.402344,-2.40625 -2.402344,-6.30469 0,-8.71094 2.40625,-2.40625 6.304687,-2.40625 8.710937,0 2.40625,2.40625 2.40625,6.30469 0,8.71094 -2.40625,2.40234 -6.304687,2.40234 -8.710937,0"
-          id="path38"
-          inkscape:connector-curvature="0" />
-       <path
-          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
-          d="m 60.816406,116.44922 c -2.40625,2.40234 -6.304687,2.40234 -8.710937,0 -2.40625,-2.40625 -2.40625,-6.30469 0,-8.71094 2.40625,-2.40625 6.304687,-2.40625 8.710937,0 2.40625,2.40625 2.40625,6.30469 0,8.71094"
-          id="path40"
-          inkscape:connector-curvature="0" />
-       <path
-          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
-          d="m 60.816406,99.195312 c -2.40625,2.402348 -6.304687,2.402348 -8.710937,0 -2.40625,-2.40625 -2.40625,-6.308593 0,-8.710937 2.40625,-2.40625 6.304687,-2.40625 8.710937,0 2.40625,2.402344 2.40625,6.304687 0,8.710937"
-          id="path42"
-          inkscape:connector-curvature="0" />
-       <path
-          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
-          d="m 60.816406,81.699219 c -2.40625,2.40625 -6.304687,2.40625 -8.710937,0 -2.40625,-2.402344 -2.40625,-6.304688 0,-8.707031 2.40625,-2.40625 6.304687,-2.40625 8.710937,0 2.40625,2.402343 2.40625,6.304687 0,8.707031"
-          id="path44"
-          inkscape:connector-curvature="0" />
-       <path
-          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
-          d="m 78.308594,99.195312 c -2.402344,2.402348 -6.304688,2.402348 -8.710938,0 -2.402344,-2.40625 -2.402344,-6.308593 0,-8.710937 2.40625,-2.40625 6.308594,-2.40625 8.710938,0 2.40625,2.402344 2.40625,6.304687 0,8.710937"
-          id="path46"
-          inkscape:connector-curvature="0" />
-       <path
-          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
-          d="m 78.308594,81.699219 c -2.402344,2.40625 -6.304688,2.40625 -8.710938,0 -2.402344,-2.402344 -2.402344,-6.304688 0,-8.707031 2.40625,-2.40625 6.308594,-2.40625 8.710938,0 2.40625,2.402343 2.40625,6.304687 0,8.707031"
-          id="path48"
-          inkscape:connector-curvature="0" />
-       <path
-          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
-          d="m 95.800781,81.699219 c -2.40625,2.40625 -6.304687,2.40625 -8.710937,0 -2.402344,-2.402344 -2.402344,-6.304688 0,-8.707031 2.40625,-2.40625 6.304687,-2.40625 8.710937,0 2.40625,2.402343 2.40625,6.304687 0,8.707031"
-          id="path50"
-          inkscape:connector-curvature="0" />
-       <path
-          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
-          d="m 95.800781,99.195312 c -2.40625,2.402348 -6.304687,2.402348 -8.710937,0 -2.402344,-2.40625 -2.402344,-6.308593 0,-8.710937 2.40625,-2.40625 6.304687,-2.40625 8.710937,0 2.40625,2.402344 2.40625,6.304687 0,8.710937"
-          id="path52"
-          inkscape:connector-curvature="0" />
-       <path
-          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
-          d="m 113.76953,99.195312 c -2.40234,2.402348 -6.30469,2.402348 -8.71094,0 -2.40234,-2.40625 -2.40234,-6.308593 0,-8.710937 2.40625,-2.40625 6.3086,-2.40625 8.71094,0 2.40625,2.402344 2.40625,6.304687 0,8.710937"
-          id="path54"
-          inkscape:connector-curvature="0" />
-       <path
-          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
-          d="m 78.308594,63.730469 c -2.402344,2.40625 -6.304688,2.40625 -8.710938,0 -2.402344,-2.402344 -2.402344,-6.304688 0,-8.707031 v -0.0039 c 2.40625,-2.402343 6.308594,-2.402343 8.710938,0 v 0.0039 c 2.40625,2.402343 2.40625,6.304687 0,8.707031"
-          id="path56"
-          inkscape:connector-curvature="0" />
-       <path
-          style="fill:#72e5f2;fill-opacity:1;fill-rule:nonzero;stroke:none"
-          d="m 42.847656,99.195312 c -2.40625,2.402348 -6.304687,2.402348 -8.710937,0 -2.40625,-2.40625 -2.40625,-6.308593 0,-8.710937 2.40625,-2.40625 6.304687,-2.40625 8.710937,0 2.40625,2.402344 2.40625,6.304687 0,8.710937"
-          id="path58"
-          inkscape:connector-curvature="0" />
-     </g>
-     <g
-        style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:142.291px;line-height:0;font-family:inter;-inkscape-font-specification:inter;font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-east-asian:normal;word-spacing:0px;fill:#72e5f2;fill-opacity:1;stroke-width:3.55726"
-        id="text861"
-        transform="scale(0.99558518,1.0044344)"
-        aria-label="Infrable ">
-       <path
-          id="path951"
-          style="fill:#ffffff"
-          d="M 83.553784,131.92527 H 64.807349 v 103.48437 h 18.746435 z" />
-       <path
-          id="path953"
-          style="fill:#ffffff"
-          d="m 115.85116,189.93311 c 0,-11.21754 6.77094,-17.68532 16.42207,-17.68532 9.44902,0 15.10832,6.21513 15.10832,16.57367 v 46.58818 h 18.29167 v -49.41783 c 0.0505,-18.59485 -10.56066,-29.20603 -26.57851,-29.20603 -11.62178,0 -19.60543,5.55824 -23.1425,14.19878 h -0.90953 v -13.1882 H 97.559485 v 77.61328 h 18.291675 z" />
-       <path
-          id="path955"
-          style="fill:#ffffff"
-          d="m 217.955,157.79636 h -16.11891 v -6.11406 c 0,-6.06354 2.52648,-9.44901 9.34796,-9.44901 2.88018,0 5.30559,0.65688 6.82148,1.11164 l 3.68865,-14.14825 c -2.37489,-0.80847 -7.57942,-2.12224 -13.89561,-2.12224 -13.49137,0 -24.25415,7.73101 -24.25415,23.39515 v 7.32677 h -11.47019 v 14.14826 h 11.47019 v 63.46502 h 18.29167 V 171.94462 H 217.955 Z" />
-       <path
-          id="path957"
-          style="fill:#ffffff"
-          d="m 226.6551,235.40964 h 18.29167 v -45.62812 c 0,-9.85325 7.42783,-16.82631 17.48319,-16.82631 3.0823,0 6.92254,0.55582 8.48896,1.06112 v -16.82632 c -1.66748,-0.30318 -4.54766,-0.50529 -6.56884,-0.50529 -8.89318,0 -16.32102,5.05294 -19.15067,14.04719 h -0.80847 V 157.79636 H 226.6551 Z" />
-       <path
-          id="path959"
-          style="letter-spacing:-7.5px;fill:#72e5f2;fill-opacity:1"
-          d="m 299.78029,236.97605 c 12.17761,0 19.45385,-5.70983 22.7888,-12.22813 h 0.60635 v 10.66172 h 17.58426 v -51.9443 c 0,-20.51497 -16.72526,-26.67956 -31.5304,-26.67956 -16.32102,0 -28.85233,7.27624 -32.89468,21.42449 l 17.07896,2.42542 c 1.81906,-5.3056 6.97307,-9.85325 15.91678,-9.85325 8.48896,0 13.13767,4.34553 13.13767,11.97548 v 0.30318 c 0,5.25507 -5.50772,5.50771 -19.2012,6.97307 -15.05779,1.61694 -29.45869,6.11407 -29.45869,23.59726 0,15.25991 11.16702,23.34462 25.97215,23.34462 z m 4.74977,-13.44084 c -7.62995,0 -13.08713,-3.48653 -13.08713,-10.20695 0,-7.0236 6.11407,-9.95431 14.29984,-11.11649 4.8003,-0.65688 14.4009,-1.86959 16.77579,-3.78971 v 9.14584 c 0,8.64054 -6.97307,15.96731 -17.9885,15.96731 z" />
-       <path
-          id="path961"
-          style="letter-spacing:-7.5px;fill:#72e5f2;fill-opacity:1"
-          d="m 352.46088,235.40964 h 17.9885 V 223.1815 h 1.06111 c 2.88018,5.65931 8.89319,13.59243 22.23297,13.59243 18.29167,0 31.98516,-14.50196 31.98516,-40.06987 0,-25.87109 -14.09772,-39.91828 -32.03569,-39.91828 -13.69348,0 -19.40331,8.2363 -22.18244,13.84507 h -0.75794 V 131.92527 H 352.46088 Z M 370.39885,196.603 c 0,-15.05778 6.46777,-24.80997 18.24114,-24.80997 12.1776,0 18.44326,10.35854 18.44326,24.80997 0,14.55249 -6.36672,25.16368 -18.44326,25.16368 -11.67231,0 -18.24114,-10.1059 -18.24114,-25.16368 z" />
-       <path
-          id="path963"
-          style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:142.291px;line-height:0;font-family:Inter;-inkscape-font-specification:Inter;font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-east-asian:normal;letter-spacing:-5.625px;fill:#72e5f2;fill-opacity:1;stroke-width:3.55726"
-          d="m 452.20971,131.92527 h -18.29167 v 103.48437 h 18.29167 z" />
-       <path
-          id="path965"
-          style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:normal;font-size:142.291px;line-height:0;font-family:Inter;-inkscape-font-specification:Inter;font-variant-ligatures:normal;font-variant-caps:normal;font-variant-numeric:normal;font-variant-east-asian:normal;letter-spacing:-5.625px;fill:#72e5f2;fill-opacity:1;stroke-width:3.55726"
-          d="m 499.61539,236.92552 c 18.08955,0 30.5198,-8.84266 33.75369,-22.33403 l -17.07896,-1.92012 c -2.47595,6.56884 -8.53948,10.00484 -16.42208,10.00484 -11.8239,0 -19.65597,-7.78154 -19.80756,-21.07079 h 54.06654 v -5.60877 c 0,-27.23539 -16.37155,-39.21087 -35.47169,-39.21087 -22.23297,0 -36.73493,16.32102 -36.73493,40.27199 0,24.3552 14.29984,39.86775 37.69499,39.86775 z m -19.50438,-47.64929 c 0.55583,-9.90378 7.8826,-18.24114 18.79697,-18.24114 10.51013,0 17.58425,7.68048 17.68531,18.24114 z" />
-     </g>
-   </svg>
-       </a>
-</span>
+      <img class="infrable-logo" src="./infrable-dark.svg" alt="Infrable" />
+    </a>
+    <br />
+    <h1 class="headline">Continuous provisioning for the cloud-native enterprise</h1>
+    <p>To join our mailing list or enquire about alpha access, please email <a href="mailto:hello@infrable.com"
+        class="email">hello@infrable.com</a></p>
+  </div>
 </body>
 
 </html>
