Fix location of @import in css
Signed-off-by: Stuart Preston <mail@stuartpreston.net>

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body class="infrable-logo">
-  <div class="infrable-logo">
+  <div>
     <a href="mailto:hello@infrable.com">
-      <img class="infrable-logo" src="./infrable-dark.svg" alt="Infrable" />
+      <img class="infrable-img" src="./infrable-dark.svg" alt="Infrable" />
     </a>
     <br />
     <h1 class="headline">Continuous provisioning for the cloud-native enterprise</h1>
