--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 
 <body class="infrable-logo">
-  <div>
+  <div class="container">
     <a href="mailto:hello@infrable.com">
       <img class="infrable-img" src="./infrable-dark.svg" alt="Infrable" />
     </a>
     <br />
-    <h1 class="headline">Continuous provisioning for the cloud-native enterprise</h1>
+    <h1 class="headline">A human-centered approach to deploying, managing and securing Kubernetes in the cloud.</h1>
     <p>To join our mailing list or enquire about alpha access, please email <a href="mailto:hello@infrable.com"
         class="email">hello@infrable.com</a></p>
   </div>
