--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <img class="infrable-img" src="./infrable-dark.svg" alt="Infrable" />
     </a>
     <br />
-    <h1 class="headline">A human-centered approach to deploying, managing and securing Kubernetes in the cloud.</h1>
-    <p>To join our mailing list or enquire about alpha access, please email <a href="mailto:hello@infrable.com"
+    <h1 class="headline">Accelerate your journey to the Cloud Marketplace</h1>
+    <p>To join our mailing list, please email <a href="mailto:hello@infrable.com"
         class="email">hello@infrable.com</a></p>
   </div>
 </body>
